CHANGELOG
=========

DarkElements version 4.5 - august 2016
- cleanup: removed unnecessary white space from several files
- file style: removed unnecessary id tags from several strings
- file style: updated mobile stylesheet
- file style and custom-editor-style: several small adjustments
- file functions: updated feature for html5 support in ie 8 and older
- new screenshot

DarkElements version 4.4 - june 2016
- files style and custom-editor-style: resized all headings (including line-height)
- file style: removed line-height from several elements

DarkElements version 4.3 - may 2016
- added file content-none 
- files 404, archive, index and search: relocated nothing found to separate file
- updated file index
- renamed both postmetadata files
- several small adjustments

DarkElements version 4.2 - may 2016
- theme now supports post formats
- file header: updated head section
- added file content-list 
- files archive, index and search: relocated part of loop to separate file
- file index en css: changed featured post notice
- file single: changed .page-title-post into .post-title-single
- changed .sticky into .sticky-title
- several small adjustments

DarkElements version 4.0 - april 2016
- resized all headings (thanks Tom)
- changed address tag display
- several small adjustments

DarkElements version 3.9 - march 2016
- localized mobile menu
- mobile menu now supports 2 level subpages

DarkElements version 3.8 - march 2016
- added file postmeta-single
- file single: relocated postmetadata to separate file
- bugfix in file custom-editor-style: removed tags from reset stylesheet
- seo improvement: blog description is h2 (thanks Tom)
- seo improvement: all page titles are h1 and all post titles are h2 (thanks Tom)
- seo improvement: all widget titles are h3 (thanks Tom)
- file single: changed title class into .page-title-post
- updated readme file to WordPress default
- file style: removed -moz-border-radius because not supported anymore
