@@ -19,7 +19,7 @@ if ( post_password_required() )
 			<?php wp_list_comments( array(
 				'style'       => 'ol',
 				'short_ping'  => true,
-				'avatar_size' => 32,
+				'avatar_size' => 36,
 			) ); ?>
 		</ol>
 
