@@ -1,16 +1,16 @@
 === DarkElements ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 4.5
+Version: 4.6
 Requires at least: 4.2
 Tested up to: 4.6
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
-Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, editor-style, translation-ready
+Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, translation-ready
 
 
 == Description ==
-DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar, sidebar navigation, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
+DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
 
 
 == Installation ==
@@ -29,7 +29,7 @@ You can change the header image via WordPress Dashboard > Appearance > Customize
 You will find the recommended size there too.
 
 = Logo =
-You can add your own logo in stead of blogname and description via WordPress Dashboard > Appearance > Customize.
+Set a logo to replace site title and tagline via WordPress Dashboard > Appearance > Customize.
 
 = Background =
 You can add your own background(image) via WordPress Dashboard > Appearance > Customize.
